#1981: improve windows arm64 fallback handling